code25_all/scala/3374923.txt
class Persons extends ArrayBuffer[Person] {
// methods operation on the collection
}

ArrayBuffer(1, 2, 3)

Persons(new Person("John", 32), new Person("Bob", 43))

object Persons {
    def apply(ps: Person*) = ArrayBuffer(ps: _*) 
}

object Persons extends SeqFactory[ArrayBuffer] {
    def fromArrayBuffer(ps: ArrayBuffer[Person]) = {
        val persons = new Persons
        persons appendAll ps
        persons
    }

    def newBuilder[Person]: Builder[Person, Persons] = new ArrayBuffer[Person] mapResult fromArrayBuffer
}

<console>:24: error: type mismatch;
 found   : (scala.collection.mutable.ArrayBuffer[Person]) => Persons
 required: (scala.collection.mutable.ArrayBuffer[Person(in method newBuilder)])
=> Persons
        def newBuilder[Person]: Builder[Person, Persons] = new ArrayBuffer[Perso
n] mapResult fromArrayBuffer
             ^

